# huerto

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  constants.cpp  constants.hpp  types.hpp
boundary/: boundary.hpp  boundary.t
diagnostic/: field_diagnostic.hpp  slice_diagnostic.hpp
docs/: conf.py
electromagnetics/: current.cpp  current.hpp  em_fields.cpp  em_fields.hpp  fieldsolver.hpp
electromagnetics/fdtd/: fdtd_plain.cpp  fdtd_plain.hpp  fdtd_plain_3d.cpp  fdtd_plain_3d.hpp
electromagnetics/pml/: cpml_border.cpp  cpml_border.hpp
electromagnetics/source/: beam.cpp  beam.hpp  border.cpp  border.hpp  incsource.cpp  incsource.hpp  incsource.t  plane_wave.cpp  plane_wave.hpp
hydrodynamics/: hydro_fields.cpp  hydro_fields.hpp  hydro_solver.hpp
hydrodynamics/euler/: adiabatic_knp.cpp  adiabatic_knp.hpp  adiabatic_knp.t  euler_knp.cpp  euler_knp.hpp  euler_knp.t
io/: table_data_source.cpp  table_data_source.hpp
maths/: random.cpp  random.hpp
maths/functions/: core.cpp  core.hpp
maths/integrate/: runge_kutta.hpp  runge_kutta.t
maths/interpolate/: interpolate1d.hpp  interpolate2d.hpp
maths/vector/: vector.hpp
simulation/: initialiser.hpp  simulation_context.hpp  task.cpp  task.hpp
storage/: multi_arch.hpp  small_object_storage.hpp
tables/: table_lookup.cpp  table_lookup.hpp
tests/: main.cpp  test_types.hpp
tests/fixtures/: block_runner.hpp
tests/io/: test_table_data_source.cpp  test_table_data_source_1.setup  test_table_data_source_1.table
tests/maths/: runge_kutta1d.cpp  test_interpolate1d.cpp  test_interpolate2d.cpp  vector1d.cpp  vector2d.cpp  vector3d.cpp
tests/storage/: test_small_object_storage.cpp
tests/tables/: test_table_lookup.cpp  test_table_lookup_1.setup  test_table_lookup_1.table  test_table_lookup_2.setup  (+1 more)
util/: field_util.hpp  fieldsum.hpp  generic_defs.hpp  generic_undefs.hpp  visitor.hpp
(+2 files in other folders)
